skeleton of main page up

--- a/index.html
+++ b/index.html
@@ -3,8 +3,33 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Nicolas Oman</title>
+	<!-- Eric Meyer's CSS reset -->
+	<link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-	<h1>Nicolas Oman</h1>
+	<header>
+		<h1 class="name">Nicolas Oman</h1>
+		<nav>
+			<a href="#">About</a>
+			<a href="#">Blog</a>
+			<a href="#">Projects</a>
+			<a href="#">Resumé</a>
+		</nav>
+	</header>
+	
+	<main>
+		<h1 class="hero">Hello, I'm Nicolas Oman.</h1>
+			<p>I'm a designer and software developer with a focus on front-end. I enjoy creating things both beautiful and functional. I graduated from <a href="https://www.seattleu.edu/">Seattle University</a> with a B.S. in Computer Science in 2018. I am currently available for hire.</p>
+			<section>
+				<h2>Interested?</h2><span class="button">Email Me</span>
+			</section>
+	</main>
+	<footer>
+		<h2>
+			Made in Seattle, WA <span role="image" aria-label="mountain">⛰</span>
+		</h2>
+	</footer>
 </body>
 </html>
